infra/hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: hello
  template:
    metadata:
      labels:
        run: hello
    spec:
      containers:
      - image: asia.gcr.io/docker-test-sandbox/demo/hello:0.0.1
        name: hello

---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: default
spec:
  type: ClusterIP
  selector:
    run: hello
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    name: hello
