infra/ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules: 
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            serviceName: hello
            servicePort: 5000
